# python-omnilogic-local

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .pylintrc  .sonarcloud.properties  CHANGELOG.md  DOCKER.md  Dockerfile  README.md  Readme.md  omnilogic.py  omnilogicTypes.py  pyproject.toml  shell.nix
.github/: copilot-instructions.md
.github/workflows/: cd-docker.yml  cd-release.yaml  cd.yaml  ci-testing.yml  ci.yml  docker.yaml  docker.yml  pr-checks.yaml  pr-checks.yml  prek.yaml  pytest.yaml  release.yaml  test.yaml
pyomnilogic_local/: __init__.py  _base.py  api.py  backyard.py  bow.py  chlorinator.py  chlorinator_equip.py  cli.py  cli_legacy.py  collections.py  colorlogiclight.py  csad.py  csad_equip.py  decorators.py  exceptions.py  filter.py  groups.py  heater.py  heater_equip.py  omnilogic.py  omnilogicTypes.py  omnitypes.py  protocol.py  pump.py  relay.py  schedule.py  sensor.py  system.py  types.py  util.py
pyomnilogic_local/api/: __init__.py  api.py  constants.py  exceptions.py  message.py  mock_api.py  protocol.py
pyomnilogic_local/cli/: __init__.py  cli.py  pcap_utils.py  utils.py
pyomnilogic_local/cli/debug/: __init__.py  commands.py
pyomnilogic_local/cli/get/: __init__.py  backyard.py  bows.py  chlorinators.py  commands.py  csads.py  filters.py  groups.py  heaters.py  lights.py  pumps.py  relays.py  schedules.py  sensors.py  valves.py
pyomnilogic_local/models/: __init__.py  const.py  exceptions.py  filter_diagnostics.py  leadmessage.py  mspconfig.py  telemetry.py  util.py
tests/: __init__.py  test_api.py  test_chlorinator_bitmask.py  test_chlorinator_multibit.py  test_decorators.py  test_effects_collection.py  test_filter_pump.py  test_fixtures.py  test_omnilogic.py  test_protocol.py
tests/fixtures/: issue-144.json  issue-163.json  issue-60.json
