[project]
name = "python-omnilogic-local"
version = "0.19.0"
description = "A library for local control of Hayward OmniHub/OmniLogic pool controllers using their local API"
readme = "README.md"
requires-python = ">=3.13,<4.0.0"
authors = [
    {name = "Chris Jowett",email = "421501+cryptk@users.noreply.github.com"},
    {name = "djtimca"},
    {name = "garionphx"}
]
license = {text = "Apache-2.0"}
dependencies = [
    "pydantic >=2.0.0,<3.0.0",
    "click >=8.0.0,<8.4.0",
    "xmltodict >=1.0.2,<2.0.0",
]

[project.scripts]
omnilogic = "pyomnilogic_local.cli.cli:entrypoint"

[project.optional-dependencies]
cli = [
    "scapy>=2.6.1,<3.0.0",
]

[tool.mypy]
python_version = "3.13"
plugins = [
    "pydantic.mypy",
    "pydantic_xml.mypy",
]
follow_imports = "silent"
strict = true
ignore_missing_imports = true
disallow_subclassing_any = false
warn_return_any = false

[tool.pylint."FORMAT"]
expected-line-ending-format = "LF"
# Maximum number of characters on a single line.
max-line-length=140

[tool.ruff]
line-length = 140

[tool.ruff.lint]
select = [
    "ERA",    # eradicate commented code
    "ASYNC",  # flake8-async
    "B",      # flake8-bugbear
    "A",      # flake8-builtins
    "EM",     # flake8-errmsg
    "FIX",    # flake8-fixme
    "ISC",    # flake8-implicit-str-concat
    "LOG",    # flake8-logging
    "G",      # flake8-logging-format
    "INP",    # flake8-no-pep420
    "PIE",    # flake8-pie
    "T20",    # flake8-print
    "Q",      # flake8-quotes
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SIM",    # flake8-simplify
    "PTH",    # flake8-use-pathlib
    "TID252", # flake8-tidy-imports
    "TD",     # flake8-todos
    "TC",     # flake8-type-checking
    "ARG",    # flake8-unused-arguments
    "I",      # isort
    "N",      # pep8-naming
    "PERF",   # perflint
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    # "DOC",   # pydoclint, only available with ruff preview mode enabled
    "D",      # pydocstyle
    "F",      # pyflakes
    "UP",     # pyupgrade
    "RUF",    # ruff-specific rules
    "TRY",
]
ignore = [
    "D100", # Disabled until we get everything documented.
    "D101", # Disabled until we get everything documented.
    "D102", # Disabled until we get everything documented.
    "D107", # Disabled until we get everything documented.
]
future-annotations = true

[tool.ruff.lint.pydocstyle]
convention = "google"
